Add Makefile support for the whole project

--- a/key-handler/src/Makefile
+++ b/key-handler/src/Makefile
@@ -1,9 +1,12 @@
 obj-m += key-handler.o
 ccflags-y := -std=gnu99 -Wno-declaration-after-statement
 
+.PHONY : clean
+
 all:
-	make -C /lib/modules/$(shell uname -r)/build M=$(PWD) modules
-	insmod key-handler.ko
+	make -C /lib/modules/$(shell uname -r)/build M=$(CURDIR) modules
+	-insmod key-handler.ko
 clean:
-	make -C /lib/modules/$(shell uname -r)/build M=$(PWD) clean
-	rmmod key-handler.ko
+	-rmmod key-handler.ko
+	-rm -f /dev/key-handler
+	make -C /lib/modules/$(shell uname -r)/build M=$(CURDIR) clean
