Adapt key-handler-api to new interface

--- a/key-handler-api/src/Makefile
+++ b/key-handler-api/src/Makefile
@@ -1,6 +1,6 @@
 .PHONY : clean
 
 all:
-	gcc key-handler-api.c -o key-handler-api -std=c11
+	gcc key-handler-api.c -o key-handler-api -std=c11 -I ../../key-handler/src
 clean:
 	-rm key-handler-api
